k8s/api-service-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  labels:
    app: api-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
        - name: api-service
          image: alih107/api-service:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: api-service
    spring-boot: "true"
spec:
  ports:
    - port: 8090
      targetPort: 8080
      protocol: TCP
  selector:
    app: api-service
  type: LoadBalancer
