k8s/creditcard-service-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: creditcard-service
  labels:
    app: creditcard-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: creditcard-service
  template:
    metadata:
      labels:
        app: creditcard-service
    spec:
      containers:
        - name: creditcard-service
          imagePullPolicy: Always
          image: whoiscan/creditcard-service:0.1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: creditcard-service
  labels:
    app: creditcard-service
    spring-boot: "true"
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: creditcard-service
  type: ClusterIP
