k8s/order-service-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: whoiscan/order-service:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
    spring-boot: "true"
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: order-service
  type: ClusterIP
