k8s/payment-service-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  labels:
    app: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: whoiscan/payment-service:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment-service
    spring-boot: "true"
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: payment-service
  type: LoadBalancer
