k8s/product-service-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: whoiscan/product-service:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
    spring-boot: "true"
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: product-service
  type: ClusterIP
